# titanic-automl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: original_exploration.ipynb
scripts/: run_demo.sh  run_full.sh
src/titanic_automl/: __init__.py  cli.py  evaluation.py  model_search.py  threshold.py  utils.py
tests/: test_smoke_pipeline.py  test_threshold.py  test_utils.py
